# backend/bracket/models/db/tournament.py
@@ -28,9 +28,9 @@ class TournamentInsertable(BaseModelORM):
     registration_enabled: bool = False
     registration_info: str | None = None
     registration_deadline: datetime_utc | None = None
-    team_size_min: int = Field(1, ge=1)
-    team_size_max: int = Field(8, ge=1)
-    max_teams: int | None = Field(None, ge=1)
+    team_size_min: int = Field(default=1, ge=1)
+    team_size_max: int = Field(default=8, ge=1)
+    max_teams: int | None = Field(default=None, ge=1)
     players_can_be_in_multiple_teams: bool
     auto_assign_courts: bool
     status: TournamentStatus = TournamentStatus.OPEN
@@ -49,9 +49,9 @@ class TournamentUpdateBody(BaseModelORM):
     registration_enabled: bool = False
     registration_info: EmptyStrToNone | str = None
     registration_deadline: datetime_utc | None = None
-    team_size_min: int = Field(1, ge=1)
-    team_size_max: int = Field(8, ge=1)
-    max_teams: int | None = Field(None, ge=1)
+    team_size_min: int = Field(default=1, ge=1)
+    team_size_max: int = Field(default=8, ge=1)
+    max_teams: int | None = Field(default=None, ge=1)
     players_can_be_in_multiple_teams: bool
     auto_assign_courts: bool
     duration_minutes: int = Field(..., ge=1)
